# fastapi-webapp

./: README.md  main.py  pyproject.toml
api/: api.py
services/: package_service.py  user_service.py
templates/: index.html
templates/home/: about.html  index.html
templates/shared/: _layout.html
viewmodels/home/: indexviewmodel.py
viewmodels/shared/: viewmodel.py
views/: home.py
