[tool.poetry]
name = "fastapi-webapp"
version = "0.1.0"
description = "Just a simple test using fastAPI"
authors = ["Cassio Rodrigues"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
fastapi-chameleon = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
